# gifcopypaster

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  app_linux.cpp  app_test.cpp  app_win.cpp  clipapp.cpp  clipapp.h
extension/: background.js  manifest.json
install/: install.cmd  install.ps1  install.sh  uninstall.cmd  uninstall.sh
